force-app/main/default/objects/Exam__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description field describes about the exam</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>