force-app/main/default/objects/Exam__c/fields/Pass_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Pass_Percentage__c</fullName>
    <description>Pass Percentage describes the required percentage to pass in the particular exam</description>
    <label>Pass Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>