force-app/main/default/objects/Exam__c/fields/Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_Questions__c</fullName>
    <description>Total Questions field used to describe the No.of questions for the exam</description>
    <label>Total Questions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>